Build 4.0.0.XXXX
=============================

** Known BREAKING CHANGES from NH4.0.0.Alpha2 to 4.0.0.Alpha1

    The interface IEnhancedProjection was removed and its methods moved to IProjection.

Build 4.0.0.Alpha2
=============================

** Known BREAKING CHANGES from NH4.0.0.Alpha1 to 4.0.0.Alpha2

    Fixed mapping by code behaviour when map child subclasses (see NH-3135 and NH-3269)
    
    The constructor of AbstractComponentTuplizer now behaves like AbstractEntityTuplizer in the way
    that it doesn't create the instantiator any more. Custom component tuplizers that derive
    directly from AbstractComponentTuplizer need to add this line of code in their constructor:
      instantiator = BuildInstantiator(component);


** Bug
    * [NH-2380] - Cannot perform distinct when selecting an anonymous type
    * [NH-2486] - Distinct() extension method problem with Object Initialisers
    * [NH-2655] - DbType.Double should be float(53) instead of DOUBLE PRECISION in the SQL-Severer2000 Dialect
    * [NH-2692] - Using Any() on a collection of components results in invalid SQL: Column of parent ID is used instead of key column
    * [NH-2861] - <filter> doesn't work in conjunction with <join>
    * [NH-2865] - "Expression type 'NhSumExpression' is not supported by this SelectClauseVisitor."
    * [NH-2961] - "Index was outside the bounds of the array" error when executing cached query for single result with distinct results transformer
    * [NH-3135] - Collection of Components in BaseClass cannot be mapped to a different table
    * [NH-3269] - UniqueKey on property of base class will affect all inherited class
    * [NH-3392] - Add ability to expand subcollections with composites ids with WCF Data Services
    * [NH-3417] - Nested projection of subcollection throws
    * [NH-3423] - MemberInitExpression causing problem in HqlGeneratorExpressionTreeVisitor (WCF DS)
    * [NH-3571] - Linq does not support dynamic components inside components