@@ -4,6 +4,7 @@ Build 4.0.0.XXXX
 ** Known BREAKING CHANGES from NH4.0.0.Alpha2 to 4.0.0.Alpha1
 
     The interface IEnhancedProjection was removed and its methods moved to IProjection.
+    Two other overloads of the GetColumnAliases() methods was removed from IProjection.
 
 Build 4.0.0.Alpha2
 =============================
